--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,18 @@
             <artifactId>jaunt</artifactId>
             <version>1.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-rs-client</artifactId>
+            <version>3.0.0-milestone1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-transports-http-hc</artifactId>
+            <version>3.0.0-milestone1</version>
+        </dependency>
+
     </dependencies>
 
 
